alterando e corrigindo a arquitetura